[ 2288872 ] Implement Flight Maneuverability, improvements
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8932 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
@@ -324,7 +324,7 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 &nbsp;|MOVE.%movement.NAME|&nbsp;|MOVE.%movement.RATE|&nbsp;(|MOVE.%movement.SQUARES|&nbsp;squares)
 |ENDIF|
 |IIF(MOVE.%movement.NAME:Fly)|
-&nbsp;|ABILITYALL.Special Ability.HIDDEN.0.TYPE=Maneuverability.ASPECT.Maneuverability|
+&nbsp;(|ABILITYALL.Special Ability.HIDDEN.0.TYPE=Maneuverability.ASPECT.Maneuverability|)
 |ENDIF|
 |ENDFOR|
 
