Update release notes for latest changes.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9191 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-51510.html
+++ b/installers/release-notes/pcgen-release-notes-51510.html
@@ -48,8 +48,9 @@ Also premiering in this release is the new data converter. This will ensure that
 the data files you have written or purchased will continue to function in future 
 versions of PCGen. As long as your data loaded cleanly in 5.14, you can convert 
 it to match the syntax in 5.16 and beyond. In most cases this will be automatic, 
-but the tool will requests decisions from you where there is ambiguity about the 
-data. You can find it either as a jar  
+but the tool will request decisions from you where there is ambiguity about the 
+data. You can find it either as batch-convert.jar in the pcgen folder or as a 
+Shortcut in the start menu if you are using the Windows installer.
 </p><p>
 A final word about what a beta release is for the PCGen team. This is a build that 
 has all of the new features that we plan shipping with v5.16. The beta cycle is where 
@@ -74,11 +75,14 @@ your email!
 
 		<ul>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Pathfinder RPG (Beta Playtest Edition). Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2204696">2204696</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#zaister">zaister</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Pathfinder RPG (Beta Playtest Web Enhancement). Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2547168">2547168</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#zaister">zaister</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paradigm Concepts] Forged In Magic. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=1048168">1048168</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#amaitland">amaitland</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Module D0: Hollow's Last Hope. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2425397">2425397</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#maredudd800">maredudd800</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Module D1: Crown of the Kobold King. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2437826">2437826</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#maredudd800">maredudd800</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Module D1.5: Revenge of the Kobold King. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2444404">2444404</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#maredudd800">maredudd800</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Second Darkness, Chapter 5: A Memory of Darkness. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2483232">2483232</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#eddyanthony">eddyanthony</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [Paizo] Second Darkness - Chapter 6. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2527744">2527744</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#eddyanthony">eddyanthony</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [En Publishing] Elements of Magic (Revised). Fixes <a href="http://sourceforge.net/support/tracker.php?aid=1812299">1812299</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#eddyanthony">eddyanthony</a>)</li>
 		</ul>
 
 <p><i>James Dempsey</i> for the PCGEN Team -- 1 February, 2009.</p>
@@ -193,6 +197,7 @@ your email!
 
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1048168">1048168</a> ]	[Paradigm Concepts] Forged In Magic</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1812299">1812299</a> ]	[En Publishing] Elements of Magic (Revised)</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2204696">2204696</a> ]	[Paizo] Pathfinder RPG (Beta Playtest Edition)</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2425397">2425397</a> ]	[Paizo] Module D0: Hollow&#039;s Last Hope</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2437826">2437826</a> ]	[Paizo] Module D1: Crown of the Kobold King</li>
@@ -217,6 +222,7 @@ your email!
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2430832">2430832</a> ]	[Pathfinder] ABILITYLIST tag for Ability Categories</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2477449">2477449</a> ]	[Pathfinder] Adding Known Spells through Abilities</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2486857">2486857</a> ]	Automatic Conversion of PREVISION:1,Foo=0</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2551041">2551041</a> ]	ALLOWDUPES to suppress duplicate messages</li>
 </ul>
 
 <h3>Data Feature Requests</h3>
@@ -265,7 +271,9 @@ your email!
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2112474">2112474</a> ]	PCGen does not close plugin JARs</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2175469">2175469</a> ]	BONUS:VAR and PREFEAT not working together</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2183236">2183236</a> ]	QUALIFY token error with FEAT as first argument</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2191119">2191119</a> ]	CL now failing on Substitution Levels</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2203608">2203608</a> ]	[5.15.5] Support for using exotic weapons 1-handed broken</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2341701">2341701</a> ]	false positive duplicate language message</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2385081">2385081</a> ]	SEVERE Reference to Constructed &lt;Entity&gt; is ambiguous</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2387797">2387797</a> ]	TEMPBONUS:FEAT= broken for abilities</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2391299">2391299</a> ]	Unconstructed Reference with INCLUDE</li>
@@ -276,6 +284,7 @@ your email!
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2482731">2482731</a> ]	CHANGEPROF does not appear to work</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2482980">2482980</a> ]	Modifying Charges for Wands causes unexpected behavior</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2483025">2483025</a> ]	Kits are not granting GEAR</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2483029">2483029</a> ]	Stack Overflow when WeaponProf DisplayName is also a Type</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2483203">2483203</a> ]	Pull Down Menus not listing entries in alphabetical order</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2484692">2484692</a> ]	ADD:ABILITY - not respecting PRExxx in choices</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2488878">2488878</a> ]	Concurrent modification error [STARTSKILLPTS with leveling]</li>
@@ -289,9 +298,13 @@ your email!
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2508331">2508331</a> ]	Forward references create objects</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2508779">2508779</a> ]	Spell LST Editor can&#039;t copy or make New spell</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2512195">2512195</a> ]	SEVERE Exception loading files</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2512317">2512317</a> ]	DESC Parenthesis count not validated at LST Load</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2525607">2525607</a> ]	False positive: No WeaponProf objects</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2530373">2530373</a> ]	Spelllist chooser not popping</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2534389">2534389</a> ]	CHOOSE:SPELLS bug</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2541585">2541585</a> ]	Converter should shorten file names</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2547539">2547539</a> ]	LEVEL and HD have bug with FEAT in Template</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2547545">2547545</a> ]	ADD:LANGUAGE isn&#039;t properly counted</li>
 </ul>
 
 <h3>Data Bugs</h3>
