Adapt sheets for Pathfinder Perception skill
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9457 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
@@ -63,7 +63,11 @@ $Date$
 |VISION|, 
 |ENDIF|
 |ENDFOR|
+|IIF(GAMEMODE:Pathfinder)|
+Perception |SKILL.Perception.TOTAL.SIGN|,
+|ELSE|
 Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
+|ENDIF|
 
 <!-- Sense TYPE Abilities -->
 |MANUALWHITESPACE|
