[ 2625813 ] [HTML][Pathfinder] Add CMB table
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9475 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock3.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock3.htm
@@ -56,7 +56,12 @@ vp |HP|; wp |ALTHP|;
 |ENDIF|
 Init |INITIATIVEMOD|;
 Spd |MOVEMENT|; AC |AC.Total|, touch |AC.Touch|, flat-footed |AC.Flatfooted|,
-Base Atk |ATTACK.MELEE|; Grp|ATTACK.GRAPPLE.TOTAL|;
+Base Atk |ATTACK.MELEE|; 
+|IIF(GAMEMODE:Pathfinder)|
+CMB |VAR.CMB.INTVAL.SIGN|; 
+|ELSE|
+Grp |ATTACK.GRAPPLE.TOTAL|; 
+|ENDIF|
 
 Atk:
 |FOR,%weap,0,COUNT[EQTYPE.WEAPON]-1,1,0|
