--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock5.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock5.htm
@@ -620,11 +620,16 @@ at will)
 |ENDFOR|
 <br>
 
-<b>Base Atk</b> |ATTACK.MELEE.BASE|; <b>Grp</b> 
+<b>Base Atk</b> |ATTACK.MELEE.BASE|; 
+|IIF(GAMEMODE:Pathfinder)|
+<b>Combat Manuever Bonus</b> |VAR.CMB.INTVAL.SIGN|
+|ELSE|
+<b>Grp</b> 
 |IIF(VAR.IF(var("CanNotGrapple")==0;1;0):1)|
 |VAR.(STR+BAB+(SIZE-4)+(SIZE-4)+(SIZE-4)+(SIZE-4)+(ATTACK.GRAPPLE.MISC)).INTVAL.SIGN|
 |ELSE|
  - 
+|ENDIF|
 |ENDIF|
 <br>
 
